style: swiched back to java version to also support 8
Former-commit-id: 3d65fbe33a0d47602c5cd3ddc7281313a6b92de0